--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,11 @@ body {
   margin: 0;
 }
 
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
 a {
   color: inherit;
   text-decoration: none;
